set input text size to prevent zoom on mobiles

--- a/public/stylesheets/globals.scss
+++ b/public/stylesheets/globals.scss
@@ -65,6 +65,12 @@ textarea {
   }
 }
 
+input[type="email"],
+input[type="text"],
+select:focus {
+  font-size: 16px;
+}
+
 hr {
   border: none;
   background-color: $black;
