--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -51,6 +51,11 @@ input {
 textarea.err {
   border: 2px solid red; }
 
+input[type="email"],
+input[type="text"],
+select:focus {
+  font-size: 16px; }
+
 hr {
   border: none;
   background-color: #000000; }
